parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ignore
    LIST

Grammar

Rule 0     S' -> programa
Rule 1     empty -> <empty>
Rule 2     programa -> PROGRAM pn_1 ID SEMICOLON programaAuxiliar funcs programaAuxiliar1
Rule 3     pn_1 -> empty
Rule 4     programaAuxiliar -> vars
Rule 5     programaAuxiliar -> empty
Rule 6     programaAuxiliar1 -> programaAuxiliar2 bloque main_end
Rule 7     programaAuxiliar2 -> MAIN pn_2
Rule 8     main_end -> <empty>
Rule 9     pn_2 -> empty
Rule 10    funcs -> FUN COLON funcs1
Rule 11    funcs -> empty
Rule 12    funcs1 -> tipo funcsAux1 funcs1
Rule 13    funcs1 -> tipoVoid funcsAux1 funcs1
Rule 14    funcs1 -> empty
Rule 15    tipoVoid -> VOID
Rule 16    funcsAux1 -> funcsAux5 OPENPARENTHESIS funcsAux2 CLOSEPARENTHESIS bloque func_end
Rule 17    func_end -> <empty>
Rule 18    funcsAux2 -> funcsAux3
Rule 19    funcsAux2 -> empty
Rule 20    funcsAux3 -> tipo ID funcsAux4
Rule 21    funcsAux4 -> COMMA funcsAux3
Rule 22    funcsAux4 -> empty
Rule 23    funcsAux5 -> ID
Rule 24    vars -> VAR COLON varsAuxiliar2 varsAuxiliar1
Rule 25    varsAuxiliar1 -> varsAuxiliar2 varsAuxiliar1
Rule 26    varsAuxiliar1 -> empty
Rule 27    varsAuxiliar2 -> tipo ID varsAuxiliar3 SEMICOLON
Rule 28    varsAuxiliar3 -> COMMA ID varsAuxiliar3
Rule 29    varsAuxiliar3 -> empty
Rule 30    tipo -> INT
Rule 31    tipo -> FLOAT
Rule 32    tipo -> arreglo
Rule 33    tipo -> BOOL
Rule 34    tipo -> STRING
Rule 35    bloque -> OPENBRACKET bloqueAuxiliar1 bloqueAuxiliar CLOSEBRACKET
Rule 36    bloqueAuxiliar -> estatuto bloqueAuxiliar
Rule 37    bloqueAuxiliar -> empty
Rule 38    bloqueAuxiliar1 -> vars
Rule 39    bloqueAuxiliar1 -> empty
Rule 40    estatuto -> asignacion SEMICOLON
Rule 41    estatuto -> condicion
Rule 42    estatuto -> escritura
Rule 43    estatuto -> lectura
Rule 44    estatuto -> ciclo
Rule 45    estatuto -> llamada SEMICOLON
Rule 46    estatuto -> incremento SEMICOLON
Rule 47    estatuto -> retorno
Rule 48    retorno -> RETURN retornoAux SEMICOLON
Rule 49    retornoAux -> var_cte
Rule 50    retornoAux -> spcte
Rule 51    retornoAux -> expression
Rule 52    llamada -> ID pn_llamada OPENPARENTHESIS false_bottom llamadaAux CLOSEPARENTHESIS pn_llamada2
Rule 53    pn_llamada -> empty
Rule 54    pn_llamada2 -> <empty>
Rule 55    llamadaAux -> llamadaAux1
Rule 56    llamadaAux -> empty
Rule 57    llamadaAux1 -> expression end_par pn_llamada_param llamadaAux2
Rule 58    pn_llamada_param -> <empty>
Rule 59    llamadaAux2 -> COMMA false_bottom llamadaAux1
Rule 60    llamadaAux2 -> empty
Rule 61    ciclo -> FOR pn_8 OPENPARENTHESIS expression CLOSEPARENTHESIS pn_6 bloque pn_7
Rule 62    pn_8 -> empty
Rule 63    pn_6 -> empty
Rule 64    pn_7 -> empty
Rule 65    incremento -> ID incremnetoAux1 expression
Rule 66    incremnetoAux1 -> MOREEQUALS
Rule 67    incremnetoAux1 -> LESSEQUALS
Rule 68    asignacion -> ID pupid EQUAL asignacionAux
Rule 69    asignacion -> arregloVar EQUAL asignacionAux
Rule 70    pupid -> <empty>
Rule 71    asignacionAux -> spcte
Rule 72    asignacionAux -> expression
Rule 73    arreglo -> tipo SQUAREBOPEN CTEINT SQUAREBCLOSE
Rule 74    arregloVar -> ID getLimits false_bottom SQUAREBOPEN expression setVerData end_par SQUAREBCLOSE listaccess1
Rule 75    setVerData -> <empty>
Rule 76    getLimits -> <empty>
Rule 77    setVerData1 -> <empty>
Rule 78    listaccess1 -> SQUAREBOPEN false_bottom expression setVerData1 SQUAREBCLOSE end_par
Rule 79    listaccess1 -> empty
Rule 80    lectura -> READ OPENPARENTHESIS ID CLOSEPARENTHESIS SEMICOLON
Rule 81    escritura -> PRINT OPENPARENTHESIS escrituraAuxiliar1 CLOSEPARENTHESIS SEMICOLON
Rule 82    escrituraAuxiliar1 -> expression
Rule 83    escrituraAuxiliar1 -> spcte
Rule 84    condicion -> IF OPENPARENTHESIS expression CLOSEPARENTHESIS pn_3 bloque condicionAuxiliar SEMICOLON
Rule 85    condicion -> IF OPENPARENTHESIS expression CLOSEPARENTHESIS pn_3 bloque condicionAuxiliar
Rule 86    pn_3 -> empty
Rule 87    pn_4 -> empty
Rule 88    condicionAuxiliar -> pn_9 ELSE bloque pn_5
Rule 89    condicionAuxiliar -> pn_4 empty
Rule 90    pn_9 -> empty
Rule 91    pn_5 -> empty
Rule 92    expression -> exploc logicexp
Rule 93    logicexp -> OR andor exploc top_andor
Rule 94    logicexp -> AND andor exploc top_andor
Rule 95    logicexp -> empty
Rule 96    exploc -> exp expression1
Rule 97    expression1 -> LESSER relop exp top_relop
Rule 98    expression1 -> GREATER relop exp top_relop
Rule 99    expression1 -> EQUALEQUAL relop exp top_relop
Rule 100   expression1 -> NOTEQUAL relop exp top_relop
Rule 101   expression1 -> GREATEROREQUAL relop exp top_relop
Rule 102   expression1 -> LESSEROREQUAL relop exp top_relop
Rule 103   expression1 -> empty
Rule 104   exp -> term top_exp exp1
Rule 105   exp1 -> MINUS push_sign exp
Rule 106   exp1 -> PLUS push_sign exp
Rule 107   exp1 -> empty
Rule 108   top_exp -> empty
Rule 109   term -> factor top_factor term1
Rule 110   term1 -> DIVIDE push_sign term
Rule 111   term1 -> TIMES push_sign term
Rule 112   term1 -> empty
Rule 113   factor -> OPENPARENTHESIS false_bottom expression CLOSEPARENTHESIS end_par
Rule 114   factor -> var_cte
Rule 115   factor -> ID push_id
Rule 116   top_factor -> <empty>
Rule 117   var_cte -> arregloVar
Rule 118   var_cte -> CTEINT getvalue_i
Rule 119   var_cte -> CTEFLOAT getvalue_f
Rule 120   var_cte -> ID getidvalue
Rule 121   var_cte -> llamada getidllamada
Rule 122   var_cte -> spcte
Rule 123   getidllamada -> empty
Rule 124   getarrayvalue -> <empty>
Rule 125   getidvalue -> <empty>
Rule 126   getvalue_i -> <empty>
Rule 127   getvalue_f -> <empty>
Rule 128   getvalue_b -> <empty>
Rule 129   relop -> <empty>
Rule 130   andor -> <empty>
Rule 131   top_andor -> <empty>
Rule 132   top_relop -> <empty>
Rule 133   push_sign -> <empty>
Rule 134   false_bottom -> empty
Rule 135   end_par -> <empty>
Rule 136   push_id -> <empty>
Rule 137   ctebool -> TRUE
Rule 138   ctebool -> FALSE
Rule 139   spcte -> CTESTRING
Rule 140   spcte -> ctebool

Terminals, with rules where they appear

AND                  : 94
BOOL                 : 33
CLOSEBRACKET         : 35
CLOSEPARENTHESIS     : 16 52 61 80 81 84 85 113
COLON                : 10 24
COMMA                : 21 28 59
CTEFLOAT             : 119
CTEINT               : 73 118
CTESTRING            : 139
DIVIDE               : 110
ELSE                 : 88
EQUAL                : 68 69
EQUALEQUAL           : 99
FALSE                : 138
FLOAT                : 31
FOR                  : 61
FUN                  : 10
GREATER              : 98
GREATEROREQUAL       : 101
ID                   : 2 20 23 27 28 52 65 68 74 80 115 120
IF                   : 84 85
INT                  : 30
LESSEQUALS           : 67
LESSER               : 97
LESSEROREQUAL        : 102
LIST                 : 
MAIN                 : 7
MINUS                : 105
MOREEQUALS           : 66
NOTEQUAL             : 100
OPENBRACKET          : 35
OPENPARENTHESIS      : 16 52 61 80 81 84 85 113
OR                   : 93
PLUS                 : 106
PRINT                : 81
PROGRAM              : 2
READ                 : 80
RETURN               : 48
SEMICOLON            : 2 27 40 45 46 48 80 81 84
SQUAREBCLOSE         : 73 74 78
SQUAREBOPEN          : 73 74 78
STRING               : 34
TIMES                : 111
TRUE                 : 137
VAR                  : 24
VOID                 : 15
error                : 
ignore               : 

Nonterminals, with rules where they appear

andor                : 93 94
arreglo              : 32
arregloVar           : 69 117
asignacion           : 40
asignacionAux        : 68 69
bloque               : 6 16 61 84 85 88
bloqueAuxiliar       : 35 36
bloqueAuxiliar1      : 35
ciclo                : 44
condicion            : 41
condicionAuxiliar    : 84 85
ctebool              : 140
empty                : 3 5 9 11 14 19 22 26 29 37 39 53 56 60 62 63 64 79 86 87 89 90 91 95 103 107 108 112 123 134
end_par              : 57 74 78 113
escritura            : 42
escrituraAuxiliar1   : 81
estatuto             : 36
exp                  : 96 97 98 99 100 101 102 105 106
exp1                 : 104
exploc               : 92 93 94
expression           : 51 57 61 65 72 74 78 82 84 85 113
expression1          : 96
factor               : 109
false_bottom         : 52 59 74 78 113
func_end             : 16
funcs                : 2
funcs1               : 10 12 13
funcsAux1            : 12 13
funcsAux2            : 16
funcsAux3            : 18 21
funcsAux4            : 20
funcsAux5            : 16
getLimits            : 74
getarrayvalue        : 
getidllamada         : 121
getidvalue           : 120
getvalue_b           : 
getvalue_f           : 119
getvalue_i           : 118
incremento           : 46
incremnetoAux1       : 65
lectura              : 43
listaccess1          : 74
llamada              : 45 121
llamadaAux           : 52
llamadaAux1          : 55 59
llamadaAux2          : 57
logicexp             : 92
main_end             : 6
pn_1                 : 2
pn_2                 : 7
pn_3                 : 84 85
pn_4                 : 89
pn_5                 : 88
pn_6                 : 61
pn_7                 : 61
pn_8                 : 61
pn_9                 : 88
pn_llamada           : 52
pn_llamada2          : 52
pn_llamada_param     : 57
programa             : 0
programaAuxiliar     : 2
programaAuxiliar1    : 2
programaAuxiliar2    : 6
pupid                : 68
push_id              : 115
push_sign            : 105 106 110 111
relop                : 97 98 99 100 101 102
retorno              : 47
retornoAux           : 48
setVerData           : 74
setVerData1          : 78
spcte                : 50 71 83 122
term                 : 104 110 111
term1                : 109
tipo                 : 12 20 27 73
tipoVoid             : 13
top_andor            : 93 94
top_exp              : 104
top_factor           : 109
top_relop            : 97 98 99 100 101 102
var_cte              : 49 114
vars                 : 4 38
varsAuxiliar1        : 24 25
varsAuxiliar2        : 24 25
varsAuxiliar3        : 27 28

Parsing method: LALR

state 0

    (0) S' -> . programa
    (2) programa -> . PROGRAM pn_1 ID SEMICOLON programaAuxiliar funcs programaAuxiliar1

    PROGRAM         shift and go to state 1

    programa                       shift and go to state 2

state 1

    (2) programa -> PROGRAM . pn_1 ID SEMICOLON programaAuxiliar funcs programaAuxiliar1
    (3) pn_1 -> . empty
    (1) empty -> .

    ID              reduce using rule 1 (empty -> .)

    pn_1                           shift and go to state 3
    empty                          shift and go to state 4

state 2

    (0) S' -> programa .



state 3

    (2) programa -> PROGRAM pn_1 . ID SEMICOLON programaAuxiliar funcs programaAuxiliar1

    ID              shift and go to state 5


state 4

    (3) pn_1 -> empty .

    ID              reduce using rule 3 (pn_1 -> empty .)


state 5

    (2) programa -> PROGRAM pn_1 ID . SEMICOLON programaAuxiliar funcs programaAuxiliar1

    SEMICOLON       shift and go to state 6


state 6

    (2) programa -> PROGRAM pn_1 ID SEMICOLON . programaAuxiliar funcs programaAuxiliar1
    (4) programaAuxiliar -> . vars
    (5) programaAuxiliar -> . empty
    (24) vars -> . VAR COLON varsAuxiliar2 varsAuxiliar1
    (1) empty -> .

    VAR             shift and go to state 9
    FUN             reduce using rule 1 (empty -> .)
    MAIN            reduce using rule 1 (empty -> .)

    programaAuxiliar               shift and go to state 7
    vars                           shift and go to state 8
    empty                          shift and go to state 10

state 7

    (2) programa -> PROGRAM pn_1 ID SEMICOLON programaAuxiliar . funcs programaAuxiliar1
    (10) funcs -> . FUN COLON funcs1
    (11) funcs -> . empty
    (1) empty -> .

    FUN             shift and go to state 12
    MAIN            reduce using rule 1 (empty -> .)

    funcs                          shift and go to state 11
    empty                          shift and go to state 13

state 8

    (4) programaAuxiliar -> vars .

    FUN             reduce using rule 4 (programaAuxiliar -> vars .)
    MAIN            reduce using rule 4 (programaAuxiliar -> vars .)


state 9

    (24) vars -> VAR . COLON varsAuxiliar2 varsAuxiliar1

    COLON           shift and go to state 14


state 10

    (5) programaAuxiliar -> empty .

    FUN             reduce using rule 5 (programaAuxiliar -> empty .)
    MAIN            reduce using rule 5 (programaAuxiliar -> empty .)


state 11

    (2) programa -> PROGRAM pn_1 ID SEMICOLON programaAuxiliar funcs . programaAuxiliar1
    (6) programaAuxiliar1 -> . programaAuxiliar2 bloque main_end
    (7) programaAuxiliar2 -> . MAIN pn_2

    MAIN            shift and go to state 17

    programaAuxiliar2              shift and go to state 15
    programaAuxiliar1              shift and go to state 16

state 12

    (10) funcs -> FUN . COLON funcs1

    COLON           shift and go to state 18


state 13

    (11) funcs -> empty .

    MAIN            reduce using rule 11 (funcs -> empty .)


state 14

    (24) vars -> VAR COLON . varsAuxiliar2 varsAuxiliar1
    (27) varsAuxiliar2 -> . tipo ID varsAuxiliar3 SEMICOLON
    (30) tipo -> . INT
    (31) tipo -> . FLOAT
    (32) tipo -> . arreglo
    (33) tipo -> . BOOL
    (34) tipo -> . STRING
    (73) arreglo -> . tipo SQUAREBOPEN CTEINT SQUAREBCLOSE

    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    BOOL            shift and go to state 24
    STRING          shift and go to state 25

    varsAuxiliar2                  shift and go to state 19
    tipo                           shift and go to state 20
    arreglo                        shift and go to state 23

state 15

    (6) programaAuxiliar1 -> programaAuxiliar2 . bloque main_end
    (35) bloque -> . OPENBRACKET bloqueAuxiliar1 bloqueAuxiliar CLOSEBRACKET

    OPENBRACKET     shift and go to state 26

    bloque                         shift and go to state 27

state 16

    (2) programa -> PROGRAM pn_1 ID SEMICOLON programaAuxiliar funcs programaAuxiliar1 .

    $end            reduce using rule 2 (programa -> PROGRAM pn_1 ID SEMICOLON programaAuxiliar funcs programaAuxiliar1 .)


state 17

    (7) programaAuxiliar2 -> MAIN . pn_2
    (9) pn_2 -> . empty
    (1) empty -> .

    OPENBRACKET     reduce using rule 1 (empty -> .)

    pn_2                           shift and go to state 28
    empty                          shift and go to state 29

state 18

    (10) funcs -> FUN COLON . funcs1
    (12) funcs1 -> . tipo funcsAux1 funcs1
    (13) funcs1 -> . tipoVoid funcsAux1 funcs1
    (14) funcs1 -> . empty
    (30) tipo -> . INT
    (31) tipo -> . FLOAT
    (32) tipo -> . arreglo
    (33) tipo -> . BOOL
    (34) tipo -> . STRING
    (15) tipoVoid -> . VOID
    (1) empty -> .
    (73) arreglo -> . tipo SQUAREBOPEN CTEINT SQUAREBCLOSE

    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    BOOL            shift and go to state 24
    STRING          shift and go to state 25
    VOID            shift and go to state 31
    MAIN            reduce using rule 1 (empty -> .)

    tipo                           shift and go to state 30
    tipoVoid                       shift and go to state 32
    arreglo                        shift and go to state 23
    funcs1                         shift and go to state 33
    empty                          shift and go to state 34

state 19

    (24) vars -> VAR COLON varsAuxiliar2 . varsAuxiliar1
    (25) varsAuxiliar1 -> . varsAuxiliar2 varsAuxiliar1
    (26) varsAuxiliar1 -> . empty
    (27) varsAuxiliar2 -> . tipo ID varsAuxiliar3 SEMICOLON
    (1) empty -> .
    (30) tipo -> . INT
    (31) tipo -> . FLOAT
    (32) tipo -> . arreglo
    (33) tipo -> . BOOL
    (34) tipo -> . STRING
    (73) arreglo -> . tipo SQUAREBOPEN CTEINT SQUAREBCLOSE

    FUN             reduce using rule 1 (empty -> .)
    MAIN            reduce using rule 1 (empty -> .)
    ID              reduce using rule 1 (empty -> .)
    IF              reduce using rule 1 (empty -> .)
    PRINT           reduce using rule 1 (empty -> .)
    READ            reduce using rule 1 (empty -> .)
    FOR             reduce using rule 1 (empty -> .)
    RETURN          reduce using rule 1 (empty -> .)
    CLOSEBRACKET    reduce using rule 1 (empty -> .)
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    BOOL            shift and go to state 24
    STRING          shift and go to state 25

    varsAuxiliar2                  shift and go to state 35
    varsAuxiliar1                  shift and go to state 36
    tipo                           shift and go to state 20
    arreglo                        shift and go to state 23
    empty                          shift and go to state 37

state 20

    (27) varsAuxiliar2 -> tipo . ID varsAuxiliar3 SEMICOLON
    (73) arreglo -> tipo . SQUAREBOPEN CTEINT SQUAREBCLOSE

    ID              shift and go to state 39
    SQUAREBOPEN     shift and go to state 38


state 21

    (30) tipo -> INT .

    ID              reduce using rule 30 (tipo -> INT .)
    SQUAREBOPEN     reduce using rule 30 (tipo -> INT .)


state 22

    (31) tipo -> FLOAT .

    ID              reduce using rule 31 (tipo -> FLOAT .)
    SQUAREBOPEN     reduce using rule 31 (tipo -> FLOAT .)


state 23

    (32) tipo -> arreglo .

    ID              reduce using rule 32 (tipo -> arreglo .)
    SQUAREBOPEN     reduce using rule 32 (tipo -> arreglo .)


state 24

    (33) tipo -> BOOL .

    ID              reduce using rule 33 (tipo -> BOOL .)
    SQUAREBOPEN     reduce using rule 33 (tipo -> BOOL .)


state 25

    (34) tipo -> STRING .

    ID              reduce using rule 34 (tipo -> STRING .)
    SQUAREBOPEN     reduce using rule 34 (tipo -> STRING .)


state 26

    (35) bloque -> OPENBRACKET . bloqueAuxiliar1 bloqueAuxiliar CLOSEBRACKET
    (38) bloqueAuxiliar1 -> . vars
    (39) bloqueAuxiliar1 -> . empty
    (24) vars -> . VAR COLON varsAuxiliar2 varsAuxiliar1
    (1) empty -> .

    VAR             shift and go to state 9
    ID              reduce using rule 1 (empty -> .)
    IF              reduce using rule 1 (empty -> .)
    PRINT           reduce using rule 1 (empty -> .)
    READ            reduce using rule 1 (empty -> .)
    FOR             reduce using rule 1 (empty -> .)
    RETURN          reduce using rule 1 (empty -> .)
    CLOSEBRACKET    reduce using rule 1 (empty -> .)

    vars                           shift and go to state 40
    bloqueAuxiliar1                shift and go to state 41
    empty                          shift and go to state 42

state 27

    (6) programaAuxiliar1 -> programaAuxiliar2 bloque . main_end
    (8) main_end -> .

    $end            reduce using rule 8 (main_end -> .)

    main_end                       shift and go to state 43

state 28

    (7) programaAuxiliar2 -> MAIN pn_2 .

    OPENBRACKET     reduce using rule 7 (programaAuxiliar2 -> MAIN pn_2 .)


state 29

    (9) pn_2 -> empty .

    OPENBRACKET     reduce using rule 9 (pn_2 -> empty .)


state 30

    (12) funcs1 -> tipo . funcsAux1 funcs1
    (73) arreglo -> tipo . SQUAREBOPEN CTEINT SQUAREBCLOSE
    (16) funcsAux1 -> . funcsAux5 OPENPARENTHESIS funcsAux2 CLOSEPARENTHESIS bloque func_end
    (23) funcsAux5 -> . ID

    SQUAREBOPEN     shift and go to state 38
    ID              shift and go to state 46

    funcsAux5                      shift and go to state 45
    funcsAux1                      shift and go to state 44

state 31

    (15) tipoVoid -> VOID .

    ID              reduce using rule 15 (tipoVoid -> VOID .)


state 32

    (13) funcs1 -> tipoVoid . funcsAux1 funcs1
    (16) funcsAux1 -> . funcsAux5 OPENPARENTHESIS funcsAux2 CLOSEPARENTHESIS bloque func_end
    (23) funcsAux5 -> . ID

    ID              shift and go to state 46

    funcsAux5                      shift and go to state 45
    funcsAux1                      shift and go to state 47

state 33

    (10) funcs -> FUN COLON funcs1 .

    MAIN            reduce using rule 10 (funcs -> FUN COLON funcs1 .)


state 34

    (14) funcs1 -> empty .

    MAIN            reduce using rule 14 (funcs1 -> empty .)


state 35

    (25) varsAuxiliar1 -> varsAuxiliar2 . varsAuxiliar1
    (25) varsAuxiliar1 -> . varsAuxiliar2 varsAuxiliar1
    (26) varsAuxiliar1 -> . empty
    (27) varsAuxiliar2 -> . tipo ID varsAuxiliar3 SEMICOLON
    (1) empty -> .
    (30) tipo -> . INT
    (31) tipo -> . FLOAT
    (32) tipo -> . arreglo
    (33) tipo -> . BOOL
    (34) tipo -> . STRING
    (73) arreglo -> . tipo SQUAREBOPEN CTEINT SQUAREBCLOSE

    FUN             reduce using rule 1 (empty -> .)
    MAIN            reduce using rule 1 (empty -> .)
    ID              reduce using rule 1 (empty -> .)
    IF              reduce using rule 1 (empty -> .)
    PRINT           reduce using rule 1 (empty -> .)
    READ            reduce using rule 1 (empty -> .)
    FOR             reduce using rule 1 (empty -> .)
    RETURN          reduce using rule 1 (empty -> .)
    CLOSEBRACKET    reduce using rule 1 (empty -> .)
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    BOOL            shift and go to state 24
    STRING          shift and go to state 25

    varsAuxiliar2                  shift and go to state 35
    varsAuxiliar1                  shift and go to state 48
    tipo                           shift and go to state 20
    arreglo                        shift and go to state 23
    empty                          shift and go to state 37

state 36

    (24) vars -> VAR COLON varsAuxiliar2 varsAuxiliar1 .

    ID              reduce using rule 24 (vars -> VAR COLON varsAuxiliar2 varsAuxiliar1 .)
    IF              reduce using rule 24 (vars -> VAR COLON varsAuxiliar2 varsAuxiliar1 .)
    PRINT           reduce using rule 24 (vars -> VAR COLON varsAuxiliar2 varsAuxiliar1 .)
    READ            reduce using rule 24 (vars -> VAR COLON varsAuxiliar2 varsAuxiliar1 .)
    FOR             reduce using rule 24 (vars -> VAR COLON varsAuxiliar2 varsAuxiliar1 .)
    RETURN          reduce using rule 24 (vars -> VAR COLON varsAuxiliar2 varsAuxiliar1 .)
    CLOSEBRACKET    reduce using rule 24 (vars -> VAR COLON varsAuxiliar2 varsAuxiliar1 .)
    FUN             reduce using rule 24 (vars -> VAR COLON varsAuxiliar2 varsAuxiliar1 .)
    MAIN            reduce using rule 24 (vars -> VAR COLON varsAuxiliar2 varsAuxiliar1 .)


state 37

    (26) varsAuxiliar1 -> empty .

    FUN             reduce using rule 26 (varsAuxiliar1 -> empty .)
    MAIN            reduce using rule 26 (varsAuxiliar1 -> empty .)
    ID              reduce using rule 26 (varsAuxiliar1 -> empty .)
    IF              reduce using rule 26 (varsAuxiliar1 -> empty .)
    PRINT           reduce using rule 26 (varsAuxiliar1 -> empty .)
    READ            reduce using rule 26 (varsAuxiliar1 -> empty .)
    FOR             reduce using rule 26 (varsAuxiliar1 -> empty .)
    RETURN          reduce using rule 26 (varsAuxiliar1 -> empty .)
    CLOSEBRACKET    reduce using rule 26 (varsAuxiliar1 -> empty .)


state 38

    (73) arreglo -> tipo SQUAREBOPEN . CTEINT SQUAREBCLOSE

    CTEINT          shift and go to state 49


state 39

    (27) varsAuxiliar2 -> tipo ID . varsAuxiliar3 SEMICOLON
    (28) varsAuxiliar3 -> . COMMA ID varsAuxiliar3
    (29) varsAuxiliar3 -> . empty
    (1) empty -> .

    COMMA           shift and go to state 51
    SEMICOLON       reduce using rule 1 (empty -> .)

    varsAuxiliar3                  shift and go to state 50
    empty                          shift and go to state 52

state 40

    (38) bloqueAuxiliar1 -> vars .

    ID              reduce using rule 38 (bloqueAuxiliar1 -> vars .)
    IF              reduce using rule 38 (bloqueAuxiliar1 -> vars .)
    PRINT           reduce using rule 38 (bloqueAuxiliar1 -> vars .)
    READ            reduce using rule 38 (bloqueAuxiliar1 -> vars .)
    FOR             reduce using rule 38 (bloqueAuxiliar1 -> vars .)
    RETURN          reduce using rule 38 (bloqueAuxiliar1 -> vars .)
    CLOSEBRACKET    reduce using rule 38 (bloqueAuxiliar1 -> vars .)


state 41

    (35) bloque -> OPENBRACKET bloqueAuxiliar1 . bloqueAuxiliar CLOSEBRACKET
    (36) bloqueAuxiliar -> . estatuto bloqueAuxiliar
    (37) bloqueAuxiliar -> . empty
    (40) estatuto -> . asignacion SEMICOLON
    (41) estatuto -> . condicion
    (42) estatuto -> . escritura
    (43) estatuto -> . lectura
    (44) estatuto -> . ciclo
    (45) estatuto -> . llamada SEMICOLON
    (46) estatuto -> . incremento SEMICOLON
    (47) estatuto -> . retorno
    (1) empty -> .
    (68) asignacion -> . ID pupid EQUAL asignacionAux
    (69) asignacion -> . arregloVar EQUAL asignacionAux
    (84) condicion -> . IF OPENPARENTHESIS expression CLOSEPARENTHESIS pn_3 bloque condicionAuxiliar SEMICOLON
    (85) condicion -> . IF OPENPARENTHESIS expression CLOSEPARENTHESIS pn_3 bloque condicionAuxiliar
    (81) escritura -> . PRINT OPENPARENTHESIS escrituraAuxiliar1 CLOSEPARENTHESIS SEMICOLON
    (80) lectura -> . READ OPENPARENTHESIS ID CLOSEPARENTHESIS SEMICOLON
    (61) ciclo -> . FOR pn_8 OPENPARENTHESIS expression CLOSEPARENTHESIS pn_6 bloque pn_7
    (52) llamada -> . ID pn_llamada OPENPARENTHESIS false_bottom llamadaAux CLOSEPARENTHESIS pn_llamada2
    (65) incremento -> . ID incremnetoAux1 expression
    (48) retorno -> . RETURN retornoAux SEMICOLON
    (74) arregloVar -> . ID getLimits false_bottom SQUAREBOPEN expression setVerData end_par SQUAREBCLOSE listaccess1

    CLOSEBRACKET    reduce using rule 1 (empty -> .)
    ID              shift and go to state 66
    IF              shift and go to state 67
    PRINT           shift and go to state 54
    READ            shift and go to state 61
    FOR             shift and go to state 64
    RETURN          shift and go to state 53

    bloqueAuxiliar                 shift and go to state 65
    ciclo                          shift and go to state 55
    estatuto                       shift and go to state 56
    arregloVar                     shift and go to state 57
    llamada                        shift and go to state 58
    condicion                      shift and go to state 59
    retorno                        shift and go to state 60
    lectura                        shift and go to state 62
    empty                          shift and go to state 63
    asignacion                     shift and go to state 68
    incremento                     shift and go to state 69
    escritura                      shift and go to state 70

state 42

    (39) bloqueAuxiliar1 -> empty .

    ID              reduce using rule 39 (bloqueAuxiliar1 -> empty .)
    IF              reduce using rule 39 (bloqueAuxiliar1 -> empty .)
    PRINT           reduce using rule 39 (bloqueAuxiliar1 -> empty .)
    READ            reduce using rule 39 (bloqueAuxiliar1 -> empty .)
    FOR             reduce using rule 39 (bloqueAuxiliar1 -> empty .)
    RETURN          reduce using rule 39 (bloqueAuxiliar1 -> empty .)
    CLOSEBRACKET    reduce using rule 39 (bloqueAuxiliar1 -> empty .)


state 43

    (6) programaAuxiliar1 -> programaAuxiliar2 bloque main_end .

    $end            reduce using rule 6 (programaAuxiliar1 -> programaAuxiliar2 bloque main_end .)


state 44

    (12) funcs1 -> tipo funcsAux1 . funcs1
    (12) funcs1 -> . tipo funcsAux1 funcs1
    (13) funcs1 -> . tipoVoid funcsAux1 funcs1
    (14) funcs1 -> . empty
    (30) tipo -> . INT
    (31) tipo -> . FLOAT
    (32) tipo -> . arreglo
    (33) tipo -> . BOOL
    (34) tipo -> . STRING
    (15) tipoVoid -> . VOID
    (1) empty -> .
    (73) arreglo -> . tipo SQUAREBOPEN CTEINT SQUAREBCLOSE

    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    BOOL            shift and go to state 24
    STRING          shift and go to state 25
    VOID            shift and go to state 31
    MAIN            reduce using rule 1 (empty -> .)

    tipo                           shift and go to state 30
    tipoVoid                       shift and go to state 32
    arreglo                        shift and go to state 23
    funcs1                         shift and go to state 71
    empty                          shift and go to state 34

state 45

    (16) funcsAux1 -> funcsAux5 . OPENPARENTHESIS funcsAux2 CLOSEPARENTHESIS bloque func_end

    OPENPARENTHESIS shift and go to state 72


state 46

    (23) funcsAux5 -> ID .

    OPENPARENTHESIS reduce using rule 23 (funcsAux5 -> ID .)


state 47

    (13) funcs1 -> tipoVoid funcsAux1 . funcs1
    (12) funcs1 -> . tipo funcsAux1 funcs1
    (13) funcs1 -> . tipoVoid funcsAux1 funcs1
    (14) funcs1 -> . empty
    (30) tipo -> . INT
    (31) tipo -> . FLOAT
    (32) tipo -> . arreglo
    (33) tipo -> . BOOL
    (34) tipo -> . STRING
    (15) tipoVoid -> . VOID
    (1) empty -> .
    (73) arreglo -> . tipo SQUAREBOPEN CTEINT SQUAREBCLOSE

    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    BOOL            shift and go to state 24
    STRING          shift and go to state 25
    VOID            shift and go to state 31
    MAIN            reduce using rule 1 (empty -> .)

    tipo                           shift and go to state 30
    tipoVoid                       shift and go to state 32
    arreglo                        shift and go to state 23
    funcs1                         shift and go to state 73
    empty                          shift and go to state 34

state 48

    (25) varsAuxiliar1 -> varsAuxiliar2 varsAuxiliar1 .

    FUN             reduce using rule 25 (varsAuxiliar1 -> varsAuxiliar2 varsAuxiliar1 .)
    MAIN            reduce using rule 25 (varsAuxiliar1 -> varsAuxiliar2 varsAuxiliar1 .)
    ID              reduce using rule 25 (varsAuxiliar1 -> varsAuxiliar2 varsAuxiliar1 .)
    IF              reduce using rule 25 (varsAuxiliar1 -> varsAuxiliar2 varsAuxiliar1 .)
    PRINT           reduce using rule 25 (varsAuxiliar1 -> varsAuxiliar2 varsAuxiliar1 .)
    READ            reduce using rule 25 (varsAuxiliar1 -> varsAuxiliar2 varsAuxiliar1 .)
    FOR             reduce using rule 25 (varsAuxiliar1 -> varsAuxiliar2 varsAuxiliar1 .)
    RETURN          reduce using rule 25 (varsAuxiliar1 -> varsAuxiliar2 varsAuxiliar1 .)
    CLOSEBRACKET    reduce using rule 25 (varsAuxiliar1 -> varsAuxiliar2 varsAuxiliar1 .)


state 49

    (73) arreglo -> tipo SQUAREBOPEN CTEINT . SQUAREBCLOSE

    SQUAREBCLOSE    shift and go to state 74


state 50

    (27) varsAuxiliar2 -> tipo ID varsAuxiliar3 . SEMICOLON

    SEMICOLON       shift and go to state 75


state 51

    (28) varsAuxiliar3 -> COMMA . ID varsAuxiliar3

    ID              shift and go to state 76


state 52

    (29) varsAuxiliar3 -> empty .

    SEMICOLON       reduce using rule 29 (varsAuxiliar3 -> empty .)


state 53
